# PList

./: README.md  mandarin.c
PList/: .gitignore  CMakeLists.txt  build_release.bat
PList/include/: argparse.h  processes_list.h
PList/include/modules/: argparse.h  processes_list.h  processes_memory.h  processes_threads.h
PList/include/utils/: utils.h
PList/src/: argparse.c  main.c  processes_list.c
PList/src/modules/: argparse.c  processes_list.c  processes_memory.c  processes_threads.c
PList/src/utils/: utils.c
